<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">日历小应用</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit">退出</string>
    <string name="today">今天</string>
    <string name="previor_year">&lt;&lt;</string>
    <string name="next_year">&gt;&gt;</string>
    <string name="previor_month">&lt;</string>
    <string name="next_month">&gt;</string>
    <string name="init_date">1900年01月01日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>

</resources>
